# ckanext-dcat-be-napits

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/dcat_be_napits/: plugin.py  utils.py
ckanext/dcat_be_napits/assets/: script.js  webassets.yml
ckanext/dcat_be_napits/profiles/: __init__.py  euro_dcat_ap_2.py  euro_mobility_dcat_ap.py
ckanext/dcat_be_napits/tests/: test_plugin.py
